--- a/sytles.css
+++ b/sytles.css
@@ -5,6 +5,8 @@ body{
     display:flex;
     flex-direction: column;
     align-items: center;
+    padding-top: 50px;
+    padding-bottom: 30px;
 }
 
 .canvas{
@@ -14,4 +16,48 @@ body{
     border-radius: 15px;
     box-shadow: 0 4px 6px rgba(50, 50, 93, 0.11), 0 1px 3px rgba(0, 0, 0, 00);
 
+}
+
+.controls .controls_colors{
+    display:flex;
+}
+
+.controls{
+    margin-top: 60px;
+    cursor: pointer;
+    display:flex;
+    flex-direction: column;
+    align-items: center;
+    
+    
+}
+
+.controls .controls_btns{
+    margin-bottom: 30px ;
+}
+
+.controls_btns button{
+    all:unset;
+    cursor:pointer;
+    background-color: #ffffff;
+    padding: 5px 0px ;
+    width: 80px;
+    text-align: center;
+    border-radius:5px;
+    box-shadow: 0 4px 6px rgba(50, 50, 93, 0.11), 0 1px 3px rgba(0, 0, 0, 0.08);
+    border: 2px solid rgba(0,0,0,0.2);
+    color: rgba(0,0,0,0.9);
+    text-transform: uppercase;
+    font-weight: 600;
+    font-size: 12px;
+}
+
+.controls_colors .controls_color{
+    width: 50px;
+    height:50px;
+    border-radius: 25px;
+    box-shadow: 0 4px 6px rgba(50, 50, 93, 0.11), 0 1px 3px rgba(0, 0, 0, 0.08);
+}
+.controls .controls_range{
+    margin-top: 10px;
 }
